# haku-project

./: .gitignore  AI_ROADMAP.md  CLAUDE.md  FEATURES_ROADMAP.md  Index-library.html  LICENSE  PHASE2_SUMMARY.md  README.md  RUN_GUIDE.md  analysis_options.yaml  pubspec.yaml
.claude/: CLAUDE.md  backend-bridge.skill  frontend-designer.skill  senior-coder.skill  settings.json  settings.local.json
.claude/Haku Design System/: README.md  SKILL.md  colors_and_type.css
.claude/Haku Design System/preview/: buttons.html  cards.html  colors-crystal.html  colors-foreground.html  colors-lavender.html  colors-vivid.html  glass.html  icons.html  inputs.html  logo.html  nav.html  radii.html  shadows.html  spacing.html  type-display.html  type-scale.html
.claude/Haku Design System/ui_kits/haku-app/: Chat.jsx  Lookup.jsx  README.md  Settings.jsx  index.html  styles.css
.github/workflows/: build-native.yml
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  host-toolchain-msvc.cmake  llama_jni.cpp  stub_llm.cpp
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
android/app/src/main/kotlin/com/example/haku/: DeviceCommandHandler.kt  HakuToolSet.kt  HakuWidgetProvider.kt  LLMBridge.kt  LiteRTLMBridge.kt  MainActivity.kt  MediaPipeLLMBridge.kt  SchedulerBridge.kt
android/app/src/main/kotlin/com/example/haku/receiver/: BootReceiver.kt  ChargingBroadcastReceiver.kt  NotificationAlarmReceiver.kt
android/app/src/main/kotlin/com/example/haku/service/: BackgroundNotificationHelper.kt  HakuForegroundService.kt  HakuServiceBinder.kt
android/app/src/main/res/drawable/: ic_chat.xml  ic_edit.xml  launch_background.xml  widget_background.xml  widget_button_circle.xml  widget_question_button.xml
android/app/src/main/res/layout/: widget_4x2.xml  widget_4x3.xml
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: haku_widget_info.xml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: DEVICE_COMMAND_DESIGN.md  DEVICE_COMMAND_ROADMAP.md  LLM_SETUP.md  NATIVE_BUILD_GUIDE.md  plan_a2a_chat.md
integration_test/: README.md  app_test.dart
integration_test/helpers/: test_helpers.dart
integration_test/tests/: ai_actions_test.dart  battery_test.dart  calendar_test.dart  chat_test.dart  llm_test.dart  map_test.dart
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: GeneratedPluginRegistrant.m
lib/: main.dart
lib/models/: chat_message.dart  correlation_models.dart  entry.dart  haku_architecture.txt  llm_model_config.dart  objective.dart  preset.dart
lib/screens/: automation_screen.dart  chat_screen.dart  command_audit_screen.dart  focus_timer_screen.dart  home_screen.dart  lock_screen.dart  main_navigation_screen.dart  model_manager_screen.dart  new_entry_screen.dart  onboarding_screen.dart  presets_screen.dart  restore_screen.dart  settings_screen.dart  view_entry_screen.dart
lib/services/: ai_action_service.dart  ai_service.dart  background_task_handlers.dart  background_task_service.dart  backup_service.dart  battery_aware_service.dart  battery_optimization_service.dart  big_manager_service.dart  biometric_service.dart  calendar_service.dart  chat_history_service.dart  chat_summary_service.dart  cloud_llm_provider.dart  context_budget_service.dart  context_builder.dart  context_retriever.dart  correlation_service.dart  database_helper.dart  deferred_task_service.dart  device_command_audit.dart  device_command_gate.dart  device_command_intent_detector.dart  device_command_notification_handler.dart  device_command_service.dart  dwell_tracker.dart  encryption_service.dart  entity_extractor.dart  export_service.dart  focus_timer_service.dart  geofence_service.dart  google_auth_service.dart  hybrid_vector_search.dart  insight_notification_service.dart  lean_context_service.dart  litert_llm_provider.dart  llm_intent_detector.dart  llm_native_bridge.dart  llm_provider.dart  llm_provider_manager.dart  llm_queue_service.dart  (+42 more)
lib/services/triggers/: charging_trigger.dart  manager_summary_strategy.dart  timer_trigger.dart  trigger_service.dart
lib/services/workers/: calendar_worker.dart  correlation_worker.dart  fact_worker.dart  goal_worker.dart  health_doctor.dart  reminder_worker.dart  translator_worker.dart
lib/utils/: constants.dart  haku_design_tokens.dart
lib/widgets/: caustic_shimmer.dart  correlation_card.dart  device_command_confirmation_card.dart  event_confirmation_card.dart  location_picker_widget.dart  profile_editor_widget.dart  quick_actions_fab.dart
models/: README.md
python_proto/: app.py  group_chat.py  persona.py  thaillm_client.py
python_proto/personas/: boss.md  designer.md  engineer.md  haku_user.md
scripts/: README.md  build_and_install.ps1  build_native.ps1  build_native.sh  clean_and_build.bat  convert_to_gguf.sh  download_qwen3.sh  fix_native_libs.bat  run_integration_tests.bat  run_single_test.bat  setup_llama_cpp.bat  setup_llama_cpp.sh  setup_llm.sh
test/: entry_test.dart
